--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,29 @@
 
-server.port=8899
+server.port=80
 
 spring.datasource.password=igomall@123456
 spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://igomall2.mysql.rds.aliyuncs.com:3306/shopxxb2b2c?useUnicode=true&characterEncoding=UTF-8&useSSL=true&serverTimezone=Asia/Shanghai
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
+
+
+#------------ Sn ------------
+sn.product.prefix={.now?string('yyyyMMdd')}
+sn.product.maxLo=100
+sn.order.prefix={.now?string('yyyyMMdd')}
+sn.order.maxLo=100
+sn.orderPayment.prefix={.now?string('yyyyMMdd')}
+sn.orderPayment.maxLo=100
+sn.orderRefunds.prefix={.now?string('yyyyMMdd')}
+sn.orderRefunds.maxLo=100
+sn.orderShipping.prefix={.now?string('yyyyMMdd')}
+sn.orderShipping.maxLo=100
+sn.orderReturns.prefix={.now?string('yyyyMMdd')}
+sn.orderReturns.maxLo=100
+sn.paymentTransaction.prefix={.now?string('yyyyMMdd')}
+sn.paymentTransaction.maxLo=100
+sn.platformService.prefix={.now?string('yyyyMMdd')}
+sn.platformService.maxLo=100
+
+md5Key=123456
