--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,12 @@ server.port=80
 
 spring.datasource.password=igomall@123456
 spring.datasource.username=root
-spring.datasource.url=jdbc:mysql://igomall2.mysql.rds.aliyuncs.com:3306/shopxxb2b2c?useUnicode=true&characterEncoding=UTF-8&useSSL=true&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://igomall2.mysql.rds.aliyuncs.com:3306/block1?useUnicode=true&characterEncoding=UTF-8&useSSL=true&serverTimezone=Asia/Shanghai
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 
 #------------ Sn ------------
