--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,8 @@ dependencies {
 
     compile group: 'org.apache.commons', name: 'commons-email', version: '1.5'
 
+    compile group: 'com.aliyun', name: 'aliyun-java-sdk-core', version: '4.5.17'
+    compile group: 'com.aliyun', name: 'aliyun-java-sdk-sts', version: '3.0.2'
 
 
 
