--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     compile group: 'net.sourceforge.htmlunit', name: 'htmlunit', version: '2.46.0'
     compile group: 'net.sourceforge.htmlunit', name: 'htmlunit-core-js', version: '2.46.0'
 
-
+    compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 
     dependencies { compile fileTree(dir:'libs',include:['*.jar'])}
 
