--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,8 @@ md5Key=123456
 spring.elasticsearch.rest.uris=http://localhost:9200
 spring.data.elasticsearch.client.reactive.password=igomall@123456
 spring.data.elasticsearch.client.reactive.username=elastic
+
+
+spring.redis.database=1
+spring.redis.host=localhost
+spring.redis.port=6379
