--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,10 @@ dependencies {
     dependencies { compile fileTree(dir:'libs',include:['*.jar'])}
 
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-elasticsearch', version: '2.4.1'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '2.4.1'
+
+
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     runtimeOnly 'mysql:mysql-connector-java'
