--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,3 +39,7 @@ spring.data.elasticsearch.client.reactive.username=elastic
 spring.redis.database=1
 spring.redis.host=localhost
 spring.redis.port=6379
+
+
+spring.servlet.multipart.max-file-size=-1
+spring.servlet.multipart.max-request-size=-1
