--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-server.port=8080
+server.port=8081
 
 spring.datasource.password=igomall@123456
 spring.datasource.username=root
@@ -31,8 +31,10 @@ sn.platformService.maxLo=100
 
 md5Key=123456
 
-spring.elasticsearch.rest.uris=http://localhost:9200
-spring.data.elasticsearch.client.reactive.password=igomall@123456
+spring.elasticsearch.rest.uris=http://es.i-gomall.com
+spring.elasticsearch.rest.password=Liziyi521521
+spring.elasticsearch.rest.username=elastic
+spring.data.elasticsearch.client.reactive.password=Liziyi521521
 spring.data.elasticsearch.client.reactive.username=elastic
 
 
