--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8089
 
 spring.datasource.password=igomall@123456
 spring.datasource.username=root
-spring.datasource.url=jdbc:mysql://igomall2.mysql.rds.aliyuncs.com:3306/bootx-pdd?useUnicode=true&characterEncoding=UTF-8&useSSL=true&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://igomall1.mysql.rds.aliyuncs.com:3306/bootx-pdd?useUnicode=true&characterEncoding=UTF-8&useSSL=true&serverTimezone=Asia/Shanghai
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
@@ -31,11 +31,9 @@ sn.platformService.maxLo=100
 
 md5Key=123456
 
-spring.elasticsearch.rest.uris=http://es.i-gomall.com
+spring.elasticsearch.rest.uris=http://localhost:9200
 spring.elasticsearch.rest.password=Liziyi521521
 spring.elasticsearch.rest.username=elastic
-spring.data.elasticsearch.client.reactive.password=Liziyi521521
-spring.data.elasticsearch.client.reactive.username=elastic
 
 
 spring.redis.database=1
@@ -45,3 +43,6 @@ spring.redis.port=6379
 
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
+
+
+spring.freemarker.suffix=.html
