--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 
 server.port=8089
 
-spring.datasource.password=igomall@123456
-spring.datasource.username=root
-spring.datasource.url=jdbc:mysql://igomall1.mysql.rds.aliyuncs.com:3306/bootx-pdd?useUnicode=true&characterEncoding=UTF-8&useSSL=true&serverTimezone=Asia/Shanghai
+spring.profiles.active=dev
+
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
